WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136139
Animated GIFs scrolled out of view still cause titlebar blur to update, on tumblr.com page
https://bugs.webkit.org/show_bug.cgi?id=136139
Summary
Animated GIFs scrolled out of view still cause titlebar blur to update, on tu...
Antti Koivisto
Reported
2014-08-21 17:40:46 PDT
The code that pauses animations outside the view does not work for subframes.
Attachments
patch
(11.30 KB, patch)
2014-08-21 21:03 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-08-21 17:41:00 PDT
<
rdar://problem/18001179
>
Antti Koivisto
Comment 2
2014-08-21 21:03:15 PDT
Created
attachment 236963
[details]
patch
WebKit Commit Bot
Comment 3
2014-08-21 21:06:13 PDT
Attachment 236963
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebView.mm:1576: The parameter name "view" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/WebCore.exp.in:0: Source/WebCore/WebCore.exp.in should be sorted, use Tools/Scripts/sort-export-file script [list/order] [5] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4
2014-08-21 22:40:00 PDT
https://trac.webkit.org/r172854
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug