Animated GIFs scrolled out of view still cause titlebar blur to update, on tumblr.com page https://bugs.webkit.org/show_bug.cgi?id=136139

Reviewed by Simon Fraser.

Source/WebCore:

The mechanism for pausing GIF images outside the viewport did not work for subframes.

Test: fast/repaint/no-animation-outside-viewport-subframe.html

* WebCore.exp.in:
* page/FrameView.cpp:
(WebCore::FrameView::scrollPositionChanged):
(WebCore::FrameView::resumeVisibleImageAnimationsIncludingSubframes):

    Add a function for resuming animations as needed in all subframes.
    This is used after scrolling instead of calling the RenderView function directly.

* page/FrameView.h:
* page/Page.cpp:
(WebCore::Page::resumeAnimatingImages):
* rendering/RenderElement.cpp:
(WebCore::RenderElement::newImageAnimationFrameAvailable):

    Determine the overall visible rect so that it is correct in subframes too.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollTo):
* rendering/RenderView.cpp:
(WebCore::RenderView::resumePausedImageAnimationsIfNeeded):

LayoutTests:

* fast/repaint/no-animation-outside-viewport-subframe-expected.txt: Added.
* fast/repaint/no-animation-outside-viewport-subframe.html: Added.



Canonical link: https://commits.webkit.org/153987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172854 268f45cc-cd09-0410-ab3c-d52691b4dbfc